--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
-- id: pyink
-  name: pyink
-  description: "Pyink: a Python formatter forked from Black"
-  entry: pyink
+- id: indigo
+  name: indigo
+  description: "Indigo: a Python formatter forked from Pyink"
+  entry: indigo
   language: python
   minimum_pre_commit_version: 2.9.2
   require_serial: true
