--- a/tests/data/project_metadata/both_pyproject.toml
+++ b/tests/data/project_metadata/both_pyproject.toml
@@ -3,6 +3,6 @@ name = "test"
 version = "1.0.0"
 requires-python = ">=3.7,<3.11"
 
-[tool.pyink]
+[tool.indigo]
 line-length = 79
 target-version = ["py310"]
