--- a/tox.ini
+++ b/tox.ini
@@ -95,4 +95,4 @@ setenv = PYTHONPATH = {toxinidir}/src
 skip_install = True
 commands =
     pip install -e .[d]
-    indigo --check {toxinidir}/src {toxinidir}/tests
+    nila --check {toxinidir}/src {toxinidir}/tests
